--- a/src/components/Treasure_Hunt/Treasure_Hunt.css
+++ b/src/components/Treasure_Hunt/Treasure_Hunt.css
@@ -22,6 +22,15 @@
 
 }
 
+
+.noCoin_video_here {
+    width: 100% ;
+}
+
+
+.treasure_main_page_here{
+    overflow-x: hidden !important;
+}
 .Img_card {
     /* padding: 15px; */
     background-color: aquamarine;
@@ -311,4 +320,13 @@
     /* box-shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 9px 28px 8px rgba(0, 0, 0, 0.05); */
     pointer-events: auto;
     padding: 20px 24px;
+}
+
+
+
+
+@media only screen and (max-width:700px){
+    .noCoin_video_here{
+        width: 100% !important;
+    }
 }
